# personal-devkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  VERSION.md  pyproject.toml
apps/ocr_app/: .env.example  CHANGELOG.md  README.md  pyproject.toml
apps/ocr_app/scripts/: generate_env_example.py
apps/ocr_app/src/ocr_app/: main.py
apps/ocr_app/src/ocr_app/config/: __init__.py  settings.py
apps/ocr_app/src/ocr_app/core/: __init__.py  bootstrap.py
apps/ocr_app/src/ocr_app/observability/: __init__.py  logger.py
apps/ocr_app/tests/: test_env_example.py  test_settings.py
apps/personal_finance_app/: .copier-answers.yml  .dockerignore  .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  finance.db  pyproject.toml  test_bill.xlsx
apps/personal_finance_app/scripts/: generate_env_example.py
apps/personal_finance_app/src/personal_finance_app/: cli.py  main.py
apps/personal_finance_app/src/personal_finance_app/config/: __init__.py  settings.py
apps/personal_finance_app/src/personal_finance_app/core/: bootstrap.py
apps/personal_finance_app/src/personal_finance_app/importers/: ledger_importer.py
apps/personal_finance_app/src/personal_finance_app/mapping/: field_mapping.py
apps/personal_finance_app/src/personal_finance_app/observability/: __init__.py  logger.py
apps/personal_finance_app/src/personal_finance_app/outputs/: markdown_report.py
apps/personal_finance_app/src/personal_finance_app/services/: advisor_service.py  analysis_service.py  finance_report_service.py
apps/personal_finance_app/src/personal_finance_app/storage/: sqlite_store.py
apps/personal_finance_app/tests/: test_advisor_service.py  test_entrypoint.py  test_env_example.py  test_logger.py  test_settings.py
apps/subtitle_harvester_app/: .copier-answers.yml  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/subtitle_harvester_app/output/: media_candidates_2026_06_all.json
apps/subtitle_harvester_app/scripts/: acquire_subdl_smoke.py  generate_env_example.py  search_assrt_smoke.py  search_subdl_smoke.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/: cli.py  main.py  schema.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/commands/: discover.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/config/: settings.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/core/: __init__.py  bootstrap.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/discovery/: tmdb_discovery.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/downloads/: download_manager.py  package_processor.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/observability/: logger.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/outputs/: json_writer.py  subtitle_search_writer.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/pipelines/: media_discovery_pipeline.py  subtitle_acquire_pipeline.py  subtitle_search_pipeline.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/providers/: base.py  subdl_provider.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/routing/: subtitle_router.py
apps/subtitle_harvester_app/src/subtitle_harvester_app/state/: discovery_state.py
apps/subtitle_harvester_app/tests/: test_assrt_parser.py  test_assrt_provider.py  test_download_manager.py  test_entrypoint.py  test_env_example.py  test_logger.py  test_media_discovery_pipeline.py  test_package_processor.py  test_settings.py  test_subdl_provider.py  test_subtitle_acquire_pipeline.py  test_tmdb_discovery.py
package/retrieval_engine/: README.md  pyproject.toml
package/retrieval_engine/src/retrieval_sdk/: __init__.py
package/retrieval_engine/src/retrieval_sdk/domain/: document.py  graph.py  result.py
package/retrieval_engine/src/retrieval_sdk/indexing/: community_summarizer.py  graph_indexer.py  source_cache.py  vector.py
package/retrieval_engine/src/retrieval_sdk/loaders/: markdown.py
package/retrieval_engine/src/retrieval_sdk/parsers/: json.py  markdown.py
package/retrieval_engine/src/retrieval_sdk/prompts/: __init__.py  loader.py  renderer.py
package/retrieval_engine/src/retrieval_sdk/providers/: __init__.py  base.py
package/retrieval_engine/src/retrieval_sdk/retrieval/: base.py  graph_community.py  graph_hybrid.py  graph_local.py  hybrid.py  lexical.py
package/retrieval_engine/src/retrieval_sdk/storage/: __init__.py  community.py  neo4j.py  qdrant.py  (+2 more)
package/retrieval_engine/tests/: test_graph_indexing.py  test_graph_metadata.py  test_graph_retrieval_and_communities.py  test_markdown_and_prompts.py  test_retrieval_protocol.py  test_vector_retrieval.py
templates/agent_enterprise_boilerplate/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  VERSION.md  docker-compose.yml  pyproject.toml
templates/agent_enterprise_boilerplate/scripts/: __init__.py  generate_env_example.py
templates/agent_enterprise_boilerplate/src/app/: __init__.py  lifecycle.py  main.py
templates/agent_enterprise_boilerplate/tests/: test_container.py  test_env_example.py  test_logger.py  test_main.py  test_resources.py  test_runner.py  test_settings.py  test_workflow.py
templates/python_project_boilerplate/: .dockerignore  .env.example  Makefile  README.md  VERSION.md  copier.yml  pyproject.toml
templates/python_project_boilerplate/scripts/: check_copier_template.py  generate_env_example.py
templates/python_project_boilerplate/src/python_project_boilerplate/: main.py
templates/python_project_boilerplate/template/: .env.example.jinja  .gitignore.jinja  README.md.jinja  pyproject.toml.jinja  uv.lock.jinja  {{ _copier_conf.answers_file }}.jinja
templates/python_project_boilerplate/template/scripts/: generate_env_example.py.jinja
templates/python_project_boilerplate/template/tests/: test_entrypoint.py.jinja  test_env_example.py.jinja  test_logger.py.jinja  test_settings.py.jinja
templates/python_project_boilerplate/tests/: test_entrypoint.py  test_env_example.py  test_logger.py  test_settings.py
(+64 files in other folders)
