[project]
name = "personal-devkit"
version = "0.1.0"
description = "Monorepo for reusable development SDK packages and project templates."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "package/retrieval_engine",
    "templates/agent_enterprise_boilerplate",
    "templates/python_project_boilerplate",
]

[tool.pytest.ini_options]
testpaths = [
    "package/retrieval_engine/tests",
    "templates/agent_enterprise_boilerplate/tests",
    "templates/python_project_boilerplate/tests",
]
pythonpath = [
    "package/retrieval_engine",
    "package/retrieval_engine/src",
    "templates/agent_enterprise_boilerplate",
    "templates/agent_enterprise_boilerplate/src",
    "templates/python_project_boilerplate",
    "templates/python_project_boilerplate/src",
]
addopts = "-q --import-mode=importlib --cov=retrieval_sdk --cov=app --cov=python_project_boilerplate --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "**/.venv",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/dist",
    "**/build",
    "**/__pycache__",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = [
    "(.*/)?template/.*",
    "(.*/)?tests/.*",
]

[tool.coverage.run]
branch = true
source = [
    "retrieval_sdk",
    "app",
    "python_project_boilerplate",
]
omit = [
    "*/tests/*",
    "*/__init__.py",
]
