[project]
name = "personal-devkit"
version = "0.1.0"
description = "Monorepo for reusable development SDK packages and project templates."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "pydantic-settings>=2",
  "loguru>=0.7",
]

[dependency-groups]
dev = [
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/ocr_app",
    "packages/document_engine",
    "packages/retrieval_engine",
    "packages/crawl_engine",
    "templates/agent_enterprise_boilerplate",
    "templates/python_project_boilerplate",
]

[tool.pytest.ini_options]
testpaths = [
    "apps/ocr_app/tests",
    "packages/document_engine/tests",
    "packages/retrieval_engine/tests",
    "templates/agent_enterprise_boilerplate/tests",
    "templates/python_project_boilerplate/tests",
]
pythonpath = [
    "apps/ocr_app",
    "apps/ocr_app/src",
    "packages/document_engine",
    "packages/document_engine/src",
    "packages/retrieval_engine",
    "packages/retrieval_engine/src",
    "templates/agent_enterprise_boilerplate",
    "templates/agent_enterprise_boilerplate/src",
    "templates/python_project_boilerplate",
    "templates/python_project_boilerplate/src",
]
addopts = "-q --import-mode=importlib --cov=retrieval_engine --cov=document_engine --cov=ocr_app --cov=app --cov=python_project_boilerplate --cov-report=term-missing"

[tool.ruff]
line-length = 100
# Keep py310 here because python_project_boilerplate generates Python 3.10-compatible projects.
target-version = "py310"
extend-exclude = [
    "**/.venv",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/dist",
    "**/build",
    "**/__pycache__",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = [
    "(.*/)?template/.*",
    "(.*/)?tests/.*",
]

[[tool.mypy.overrides]]
module = [
    "document_engine.*",
    "fitz.*",
    "pix2text.*",
]
follow_imports = "skip"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = [
    "retrieval_engine",
    "document_engine",
    "ocr_app",
    "app",
    "python_project_boilerplate",
]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "packages/retrieval_engine/src/retrieval_engine/storage/neo4j.py",
    "packages/retrieval_engine/src/retrieval_engine/storage/neo4j_community.py",
    "packages/retrieval_engine/src/retrieval_engine/storage/neo4j_writer.py",
    "packages/retrieval_engine/src/retrieval_engine/storage/qdrant.py",
    "packages/document_engine/src/document_engine/components/math_extractor.py",
    "packages/document_engine/src/document_engine/engines/mineru_engine.py",
    "packages/document_engine/src/document_engine/engines/vector_engine.py",
    "packages/document_engine/src/document_engine/engines/vision_engine.py",
    "templates/agent_enterprise_boilerplate/src/app/agents/*",
    "templates/agent_enterprise_boilerplate/src/app/api/router.py",
    "templates/agent_enterprise_boilerplate/src/app/core/errors.py",
    "templates/agent_enterprise_boilerplate/src/app/core/types.py",
    "templates/agent_enterprise_boilerplate/src/app/observability/metrics.py",
    "templates/agent_enterprise_boilerplate/src/app/observability/tracer.py",
    "templates/agent_enterprise_boilerplate/src/app/services/*",
    "templates/agent_enterprise_boilerplate/src/app/tools/search_tool.py",
    "templates/python_project_boilerplate/src/python_project_boilerplate/core/banner.py",
]
