[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-finance-app"
version = "0.1.0"
description = "A lightweight Python project starter with settings, logging, and bootstrap wiring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "pydantic-settings>=2.2.1",
    "document-engine",
    "analysis-engine",
    "openai>=1.0.0",
]

[tool.uv.sources]
document-engine = { path = "../../packages/document_engine" }
analysis-engine = { path = "../../packages/analysis_engine" }


[tool.hatch.build.targets.wheel]
packages = ["src/personal_finance_app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
banner = [
    "pyfiglet>=0.8.1",
]

[project.scripts]
base-app = "personal_finance_app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=personal_finance_app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests"]

[tool.coverage.run]
source = ["personal_finance_app"]
branch = true
omit = ["tests/*", "**/__init__.py"]
