[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtitle-harvester-app"
version = "0.1.0"
description = "Harvest TMDb movie and TV metadata candidates for subtitle workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "pydantic-settings>=2.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/subtitle_harvester_app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
banner = [
    "pyfiglet>=0.8.1",
]

[project.scripts]
subtitle-harvester-app = "subtitle_harvester_app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=subtitle_harvester_app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests"]

[tool.coverage.run]
source = ["subtitle_harvester_app"]
branch = true
omit = ["tests/*", "**/__init__.py"]
